deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hf-eco2ai
  labels:
    name: hf-eco2ai
    environment: production
